# swagger/v1/swagger.yaml
@@ -635,11 +635,75 @@ paths:
           description: Created 
       
 
-      
-
+  # /salary_infos/{id}:
+  #   get:
+  #     summary: Show salary information .
+  #     tags:
+  #       - Bank details API
+  #     parameters:
+  #       - name: id
+  #         in: path
+  #         description: ID of the leave to update
+  #         required: true
+  #         schema:
+  #           type: integer                
+  #     responses: 
+  #       '201':
+  #         description: Created 
+  /bank_details:
+    post:
+      summary: Creates a Bank detail.
+      tags:
+        - Bank details API
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                bank_details:
+                  type: object
+                  properties:
+                    account_name:
+                      type: string
+                    account_number:
+                      type: string
+                    ifsc:
+                      type: string
+                    cancelled_cheque:
+                      type: string
+      responses: 
+        '201':
+          description: Created
+  /api/reset_password:
+    post:
+      summary: user reset password.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    reset_password_token:
+                      type: string
+                    password:
+                      type: string
+                    password_confirmation:
+                      type: string
+      responses: 
+        '201':
+          description: Created
 servers:
 - url: http://{defaultHost}
   variables:
     defaultHost:
       default: localhost:3000
+
+
+
 
